<resources>

    <string name="app_name">身份证识别</string>
    <string name="action_settings">Settings</string>
    <string name="name">姓   名</string>
    <string name="sex">性   别</string>
    <string name="ethnic">名  族</string>
    <string name="birth">出   生</string>
    <string name="year">年</string>
    <string name="mouth">月</string>
    <string name="day">日</string>
    <string name="address">住   址</string>
    <string name="car_no">公民身份号码</string>
    <string name="counter">中 华 人 民 共 和 国</string>
    <string name="jiguan">签发机关</string>
    <string name="date">有效期限</string>
</resources>